# ArucoDetection

./: .gitignore  README.md
ArucoBoardGeneration/: CMakeLists.txt
ArucoDection/: CMakeLists.txt
ArucoDection/include/: ArucoUtils.hh
ArucoDection/scripts/: GenerateBoard.py  images.json
ArucoDection/src/: CalibrateCamera.cc  DetectPose.cc  DetectTags.cc  GenerateCharucoBoard.cc  detect_tags.cc  generate_board.cc
Capture/: CMakeLists.txt
Capture/scripts/: ImgCap.py
Capture/src/: CaptureImages.cc  read_vid_stream.cc
WebcamFeed/: CMakeLists.txt
WebcamFeed/src/: read_vid_stream.cpp
